<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FilterDEMO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">来电拦截</string>

    <string name="stime_set">时间设置</string>
    <string name="stime_day">全天拦截</string>
    <string name="stime_break">指定拦截时间</string>
    <string name="stime_starttime">起始时间</string>
    <string name="stime_stoptime">结束时间</string>


    <string name="setting_local">输入地区</string>

    <string name="smsinstall">回复短信设置</string>
    <string name="smsfrequency">陌生号码多少次数后发送短信</string>
    <string name="phonefrequency">陌生号码多少次数后接听</string>
    <string name="timespan">拦截时间段设置</string>
    <string name="timeinstrall">时间设置</string>

    <string name="most">高级设置</string>


    <!--黑名单的菜单-->
    <string name="drop">退出</string>
    <string name="drophei">清空黑名单</string>
    <string name="update">更新黑名单</string>

    <!--白名单的菜单-->
    <string name="exit">退出</string>
    <string name="dropbai">清空白名单</string>
    <string name="udbai">更新白名单</string>




     <!--refresh-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

</resources>
