<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.flamingo.filterdemo.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:id="@+id/setting_ai_title"
        android:layout_alignParentTop="true">
    </com.flamingo.filterdemo.view.TitleBar>


    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        >
        <TextView
            android:id="@+id/strange_smsinstall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/smsinstall"
            android:textSize="16dip"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"
            />
        <TextView
            android:id="@+id/strange_timeinstall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeinstrall"
            android:textSize="16dip"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/most"
            android:textSize="21dip"
            android:textColor="@color/black"
            android:paddingLeft="10dip"
            android:paddingBottom="5dip"
            android:layout_marginTop="@dimen/activity_vertical_margin"

            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@color/yellow"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/strange_smslinear"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            >
            <TextView
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:text="@string/smsfrequency"
                android:textSize="16dip"
                android:textColor="@color/black"
                android:paddingRight="70dip"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:id="@+id/strange_smssinstall"
                android:paddingTop="23dp"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/strange_phonelinear"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <TextView
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:text="@string/phonefrequency"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingRight="50dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:id="@+id/strange_phoneinstall"
                android:paddingTop="23dp"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/strange_timelinear"
            android:gravity="center_vertical"
            android:paddingRight="70dip"
            android:paddingTop="10dp"
            android:paddingBottom="1dp"
            >
            <TextView
                android:layout_width="200dip"
                android:layout_height="50dip"
                android:text="@string/timespan"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:id="@+id/strange_timespaneinstall"
                android:paddingTop="23dp"
                />
        </LinearLayout>

</LinearLayout>
